<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fullPost"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ReadPostFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" />

    <LinearLayout
        android:id="@+id/postHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/md_theme_surface"
        android:orientation="horizontal"
        android:layout_below="@id/topAppBar"
        android:layout_marginTop="?attr/actionBarSize"
        android:padding="@dimen/common_spacing">

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="@dimen/avatar_size"
            android:layout_height="@dimen/avatar_size"
            android:layout_marginEnd="@dimen/common_spacing"
            android:contentDescription="@string/description_post_author_avatar_menu"
            tools:srcCompat="@sample/posts.json/data/authorAvatar" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/common_spacing"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:singleLine="true"
                android:ellipsize="end"
                tools:text="@sample/posts.json/data/author" />

            <TextView
                android:id="@+id/published"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@sample/posts.json/data/published" />
        </LinearLayout>
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/topAppBar"
        android:layout_marginTop="@dimen/post_header_top_margin"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/common_spacing">

            <!-- Вложение-картинка -->
            <ImageView
                android:id="@+id/attachmentImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/common_spacing"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:visibility="gone" />

            <!-- Текст поста -->
            <TextView
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/common_spacing"
                android:autoLink="web"
                android:text="@sample/posts.json/data/content" />

            <!-- Блок кнопок -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/likes"
                    style="@style/Widget.AppTheme.PostButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:contentDescription="@string/likes_count"
                    app:icon="@drawable/ic_like_selector"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/repost"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/repost"
                    style="@style/Widget.Material3.Button.TextButton.Icon"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/likes_count"
                    app:icon="@drawable/share_24"
                    app:layout_constraintStart_toEndOf="@id/likes"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/comments"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/comments"
                    style="@style/Widget.Material3.Button.TextButton.Icon"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/likes_count"
                    android:enabled="false"
                    app:icon="@drawable/comment_outline"
                    app:layout_constraintStart_toEndOf="@id/repost"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/views"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/views"
                    style="@style/Widget.Material3.Button.TextButton.Icon"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/views_count"
                    android:enabled="false"
                    app:icon="@drawable/ic_eye"
                    app:layout_constraintStart_toEndOf="@id/comments"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <androidx.constraintlayout.helper.widget.Flow
                    android:id="@+id/flow"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:constraint_referenced_ids="likes, repost, comments, views"
                    app:flow_horizontalGap="@dimen/mini_spacing"
                    app:flow_wrapMode="none"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>